#ifndef TETRIS_HPP
#define TETRIS_HPP

#include "../board/board.hpp"
#include "../tetromino/tetromino.hpp"
#include "event_type.hpp"

#include <pthread.h>
#include <queue>

class TetrisTest;

/**
 * @class Tetris
 * @brief Represents a Tetris game, composed essentially of a Board and a
 * Tetromino object.
 *
 * The Tetris class handles the game state, including the active Tetromino and
 * events like rotation, movement, and clockTick, making the Tetromino drop
 * one block down. Events are managed through an event-queue API.
 */
class Tetris final {
    size_t score_ = 0;
    bool isAlive_ = true;
    bool inGracePeriod_ = false;
    bool newTetrominosFirstTick_ = true; // could also be a uint32_t tickCount
    Board board_;
    TetrominoPtr activeTetromino_;
    TetrominoPtr previewTetromino_;
    std::queue<TetrominoPtr> tetrominoesQueue_;
    std::queue<EventType> eventQueue_;
    pthread_mutex_t queueMutex_ = PTHREAD_MUTEX_INITIALIZER;
    pthread_mutex_t isAliveMutex_ = PTHREAD_MUTEX_INITIALIZER;

  private:
    // #### Tetromino Actions ####

    /**
     * @brief Rotates the active Tetromino if possible.
     *
     * @param rotateClockwise True to rotate clockwise, false for
     * counter-clockwise.
     */
    void tryRotateActive(bool rotateClockwise);

    /**
     * @brief Moves the active Tetromino in the given direction if possible.
     *
     * @param direction The direction to move the Tetromino.
     */
    void tryMoveActive(Direction direction);

    /**
     * @brief Drops the active Tetromino until it hits the bottom or an occupied
     * cell.
     */
    void bigDrop();

    // #### Manage Preview-Tetromino ####

    /**
     * @brief Updates the preview-Tetromino's vertical component.
     */
    void updatePreviewVertical();

    // #### Placing and Dropping in Grid ####

    /**
     * @brief Checks whether the given tetromino can be droppped.
     *
     * @param tetromino The tetromino to be checked.
     */
    bool checkCanDrop(const Tetromino &tetromino) const;

    /**
     * @brief Places the active tetromino where it currently is in the grid
     * and sets the isAlive flag to false if it was placed outside of the
     * grid.
     */
    void placeActive();

    // #### Tetrominoes Queue ####

    /**
     * @brief Enqueues 7 new randomly shuffled Tetrominoes.
     */
    void fillTetrominoesQueue();

    /**
     * @brief Fetches the next tetromino from the queue and sets it as the
     * active tetromino.
     *
     * If there are no tetrominoes left in the queue, the queue is re-filled
     * with new tetrominoes.
     */
    void fetchNewTetromino();

    // #### Event Queue Internals ####

    /**
     * @brief Fetches the next event from the event-queue.
     *
     * @return The next event to handle.
     */
    EventType getNextEvent();

    /**
     * @brief Handles the next event in the event-queue.
     */
    void handleNextEvent();

    // #### Grid Checks ####

    /**
     * @brief Checks whether the cell at rowIdx, colIdx is empty.
     *
     * @param rowIdx The row index.
     * @param colIdx The col index.
     */
    bool checkEmptyCell(size_t rowIdx, size_t colIdx) const;

  public:
    // #### Constructors ####

    Tetris() = default;
    Tetris(const Tetris &) = delete;
    Tetris(Tetris &&) = default;

    // #### Assignment ####

    Tetris &operator=(const Tetris &) = delete;
    Tetris &operator=(Tetris &&) = default;

    // #### Destructor ####

    virtual ~Tetris() = default;

    // #### Event Queue API ####

    /**
     * @brief Adds the event to the event-queue.
     *
     * @param event The event to add to the queue.
     */
    void addEvent(EventType event);

    // #### Tetris Loop ####

    /**
     * @brief Handles each event from the event-queue.
     */
    void run();

    // #### IsAlive Flag Setter ####

    /**
     * @brief Thread-safe way of setting the isAlive member.
     *
     * @param isAlive The new isAlive value.
     */
    void setIsAlive(bool isAlive);

    // #### Getters ####

    /**
     * @brief Thread-safe way of getting the isAlive.
     *
     * @return False if the game is over; otherwise, true.
     */
    bool getIsAlive();

    /**
     * @brief Returns the current score.
     *
     * @return The current score.
     */
    size_t getCurrentScore();

    /**
     * @brief Returns how many Tetrominoes are waiting in the queue.
     *
     * @return The size of the queue.
     */
    size_t getTetrominoesQueueSize() const;

    // #### Test Fixture Class ####

    friend TetrisTest;
};

#endif
